--- a/Finnish/main/miuisystem.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/miuisystem.apk/res/values-fi-rFI/strings.xml
@@ -67,6 +67,7 @@
   <string name="device_poco_global">POCOPHONE</string>
   <string name="device_poco_india">POCO PHONE</string>
   <string name="device_xiaomi">Mi Puhelin</string>
+  <string name="dewdrops">Kastepisarat</string>
   <string name="double_seventh_day">七夕</string>
   <string name="easter">復活節</string>
   <string name="echo">Kaiku</string>
