--- a/Finnish/main/Cit.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Cit.apk/res/values-fi-rFI/strings.xml
@@ -624,6 +624,7 @@ Kun olet laittanut tiedoston \"music.mp3\" SD-kortin hakemistoon, napauta näytt
   <string name="download_fw_cfg_hint">注意：请将固件存放于/sdcard/fw目录中，配置文件存放于/sdcard/cfg目录中</string>
   <string name="download_fw_cfg_test_title">固件配置下载</string>
   <string name="download_fw_test_title">固件下载</string>
+  <string name="dsi_sar_on_off_tips">Dsi Sar Käytössä/Pois käytöstä -kytkin</string>
   <string name="dump_base_frame">Dump基帧数据</string>
   <string name="dump_data">Dump数据</string>
   <string name="dump_memory_data_timeout">dump内存数据超时</string>
@@ -861,12 +862,21 @@ Paina Piilota kamera -painiketta nähdäksesi meneekö kamera takaisin sisään"
   <string name="real_finger_touch_sensor">通过手指按压指纹模组</string>
   <string name="reboot_prompt">重启提示</string>
   <string name="reboot_prompt_detail">重启手机之后内存测试正常运行！</string>
+  <string name="reboot_times">Uudelleenkäynnistyskerrat:</string>
+  <string name="receiver_off">Vastaanotin pois käytöstä</string>
+  <string name="receiver_on">Vastaanotin käytössä</string>
+  <string name="receiver_on_off_tips">Vastaanottimen Käytössä/Pois käytöstä -kytkin</string>
+  <string name="refresh_number_of_keys">refresh number of keys</string>
+  <string name="removeFingerprint">Poista sormenjälki</string>
   <string name="remove_headset_and_starttest">Poista kuulokkeet ja paina aloita testaaksesi</string>
-  <string name="resetpixel_test">RESET PIXEL TEST</string>
-  <string name="run">Run</string>
+  <string name="resetpixel_test">NOLLAA PIKSELITESTI</string>
+  <string name="run">Käynnistä</string>
   <string name="sample_data">sample data</string>
   <string name="sample_hint">extract %1$s samples for one finger</string>
   <string name="sample_progress_hint">wait for extracting sample datas</string>
+  <string name="sar_authentation_test_title">Sar authentation test</string>
+  <string name="sar_off">Sar Pois käytöstä</string>
+  <string name="sar_on">Sar Käytössä</string>
   <string name="sar_sensor_calibrate">Aloita kalibrointi</string>
   <string name="sar_sensor_calibrate_fail">Sar-anturin kalibrointi epäonnistui</string>
   <string name="sar_sensor_calibrate_success">Sar-anturin kalibrointi onnistui</string>
@@ -907,32 +917,33 @@ After calibrate success, control the fixture close and away from the phone"</str
   <string name="security_settings_fingerprint_enroll_repeat_message">略微移动您的手指，以便添加您指纹的所有其他部分</string>
   <string name="security_settings_fingerprint_enroll_repeat_title">很好！现在重复此操作</string>
   <string name="security_settings_fingerprint_enroll_start_message">将您的手指放在指纹传感器上，感觉到振动后移开手指</string>
-  <string name="select">Select</string>
-  <string name="select_all">Select All</string>
-  <string name="select_automatic">Select Automatic</string>
-  <string name="select_manual">Select Manual</string>
-  <string name="select_none">Select None</string>
-  <string name="selftest">SELF TEST</string>
+  <string name="select">Valitse</string>
+  <string name="select_all">Valitse kaikki</string>
+  <string name="select_automatic">Valitse automaattisesti</string>
+  <string name="select_manual">Valitse manuaalisesti</string>
+  <string name="select_none">Älä valitse mitään</string>
+  <string name="selftest">ITSETESTI</string>
   <string name="sensor_checking">正在检查指纹模组...</string>
-  <string name="sensor_information">Sensor Information</string>
+  <string name="sensor_information">Anturin tiedot</string>
   <string name="sensor_validity_test_fail">模组测试失败或未经过测试！</string>
-  <string name="show_log">Show Log</string>
+  <string name="set_dsi_tips">Määritä DSI</string>
+  <string name="show_log">Näytö loki</string>
   <string name="singular">最大奇异点梯度和:</string>
   <string name="size_max">最大</string>
   <string name="size_min">最小</string>
   <string name="software_version">软件版本：</string>
-  <string name="speak_from_mic">Speaking to the MIC, the speaker playback. Judge whether there is sound.</string>
-  <string name="start">start</string>
+  <string name="speak_from_mic">Puhuessasi mikrofoniin, kaiutin toistaa sen. Tuleeko ääntä.</string>
+  <string name="start">Aloita</string>
   <string name="start_extract_sample">start to extract samples</string>
   <string name="start_extract_template">start to extract templates</string>
-  <string name="start_far">Start FAR</string>
-  <string name="start_frr">Start FRR</string>
-  <string name="status">Status</string>
+  <string name="start_far">Aloita FAR</string>
+  <string name="start_frr">Aloita FRR</string>
+  <string name="status">Tila</string>
   <string name="status_bar_notification_info_overflow">999+</string>
-  <string name="status_failed">One or more tests failed</string>
+  <string name="status_failed">Yksi tai useampi testi epäonnistui</string>
   <string name="status_passed">Läpäisty</string>
-  <string name="status_running">Running</string>
-  <string name="status_text">Status:</string>
+  <string name="status_running">Käynnissä</string>
+  <string name="status_text">Tila:</string>
   <string name="success">识别成功次数：</string>
   <string name="success_extract_sample">finished to extract sample datas</string>
   <string name="success_extract_template">finished to extract template datas</string>
