--- a/Finnish/main/MiRecycle.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiRecycle.apk/res/values-fi-rFI/strings.xml
@@ -37,7 +37,7 @@ of Mi Protect"</string>
   <string name="buy_claim_ps">Lisätietoja varten lue </string>
   <string name="buy_claim_terms">Käyttöehdot*</string>
   <string name="buy_confirm">HYVÄKSY &amp; OSTA SUOJA</string>
-  <string name="buy_insurance_desc">Vain uusi laite</string>
+  <string name="buy_insurance_desc">Powered by OneAssist</string>
   <string name="buy_privacy_agree">Jatka</string>
   <string name="buy_privacy_title">Vastuuvapauslauseke</string>
   <!-- // 8.9.17 // -->
@@ -128,21 +128,21 @@ Damaged Device from your doorstep"</string>
   <string name="instant_bank_transfer">Instant Bank Transfer</string>
   <string name="insurance_button">Insurance</string>
   <string name="insurance_description">Insurance gives you additional repair coverage</string>
-  <string name="insurance_entrance">Mi Protect - handset protection</string>
-  <string name="item_name_battery">Battery</string>
+  <string name="insurance_entrance">Mi Protect uudelle laitteelle</string>
+  <string name="item_name_battery">Akku</string>
   <string name="item_name_bluetooth">Bluetooth</string>
-  <string name="item_name_frontcamera">Front Camera</string>
-  <string name="item_name_rearcamera">Rear Camera</string>
-  <string name="item_name_sensors">Sensors</string>
-  <string name="item_name_vibration">Vibration</string>
+  <string name="item_name_frontcamera">Etukamera</string>
+  <string name="item_name_rearcamera">Takakamera</string>
+  <string name="item_name_sensors">Anturit</string>
+  <string name="item_name_vibration">Värinä</string>
   <string name="item_name_wifi">WiFi</string>
   <string name="item_progress_percent">%</string>
-  <string name="item_result_canceled">Canceled</string>
-  <string name="item_result_fail">Abnormal</string>
-  <string name="item_result_pass">Good</string>
-  <string name="item_result_refused">Refused</string>
-  <string name="item_testing_completed">completed</string>
-  <string name="label_my_order">My Order</string>
+  <string name="item_result_canceled">Peruutettu</string>
+  <string name="item_result_fail">Epätavallinen</string>
+  <string name="item_result_pass">Hyvä</string>
+  <string name="item_result_refused">Kielteinen</string>
+  <string name="item_testing_completed">Valmis</string>
+  <string name="label_my_order">Tilaukseni</string>
   <string name="landmark">Landmark</string>
   <string name="loading">Loading…</string>
   <string name="main_overall_test">START</string>
@@ -167,14 +167,15 @@ Damaged Device from your doorstep"</string>
   <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
   <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
   <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
-  <string name="postal_code">Postal Code</string>
+  <string name="postal_code">Postinumero</string>
   <string name="powered_by_cashify">Powered by</string>
-  <string name="push_ht_content">Open Security, scroll down, and test your hardware</string>
-  <string name="push_ht_title">Check out a new feature in Security</string>
+  <string name="push_ht_content">Lisätietoja laitteistosi kunnosta</string>
+  <string name="push_ht_title">Laitteistotesti</string>
   <string name="push_oa_content">Safeguard your device using extended warranty</string>
   <string name="push_oa_title">Mi Protect</string>
-  <string name="quote_upto_price">Awesome! Your device is still in good condition and values a lot. Get up to Rs. %s</string>
-  <string name="recycle_button">Recycle</string>
+  <string name="quote_upto_price">"Mahtavaa! Laitteesi on vielä hyvässä kunnossa ja arvoltaan paljon. Saat siitä noin %s.
+Huomioi, että laitteen hinnat voivat muuttua. Myy puhelimesi nyt saadaksesi siitä vielä hyvän hinnan."</string>
+  <string name="recycle_button">Kierrätä</string>
   <string name="recycle_description">Saat suurimman hinnan kierrättämällä vanhan puhelimesi</string>
   <string name="recycle_entrance">Cashify Recycle</string>
   <string name="reschedule">Reschedule</string>
